--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "dio_driver.h": "c",
-        "sw.h": "c"
+        "sw.h": "c",
+        "lcd.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
